// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLabel matches snapshot 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  padding: 5px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.8rem;
  line-height: 0.8rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  border: 1px solid var(--px-alert-label-border-color,transparent);
  background-color: var(--px-alert-label-background-color--information,blue);
  color: var(--px-alert-label-text-color--information,white);
}

<div
  className="c0"
  type="info"
>
  <span
    className="label__text"
  />
</div>
`;

exports[`AlertLabel should render type = error 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  padding: 5px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.8rem;
  line-height: 0.8rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  border: 1px solid var(--px-alert-label-border-color,transparent);
  background-color: var(--px-alert-label-background-color--error,yellow);
  color: var(--px-alert-label-text-color--error,black);
}

<div
  className="c0"
  type="error"
>
  <span
    className="label__text"
  >
    error
  </span>
</div>
`;

exports[`AlertLabel should render type = healthy 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  padding: 5px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.8rem;
  line-height: 0.8rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  border: 1px solid var(--px-alert-label-border-color,transparent);
  background-color: var(--px-alert-label-background-color--healthy,green);
  color: var(--px-alert-label-text-color--healthy,white);
}

<div
  className="c0"
  type="healthy"
>
  <span
    className="label__text"
  >
    healthy
  </span>
</div>
`;

exports[`AlertLabel should render type = important 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  padding: 5px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.8rem;
  line-height: 0.8rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  border: 1px solid var(--px-alert-label-border-color,transparent);
  background-color: var(--px-alert-label-background-color--important,red);
  color: var(--px-alert-label-text-color--important,white);
}

<div
  className="c0"
  type="important"
>
  <span
    className="label__text"
  >
    important
  </span>
</div>
`;

exports[`AlertLabel should render type = info 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  padding: 5px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.8rem;
  line-height: 0.8rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  border: 1px solid var(--px-alert-label-border-color,transparent);
  background-color: var(--px-alert-label-background-color--information,blue);
  color: var(--px-alert-label-text-color--information,white);
}

<div
  className="c0"
  type="info"
>
  <span
    className="label__text"
  >
    info
  </span>
</div>
`;

exports[`AlertLabel should render type = success 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  padding: 5px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.8rem;
  line-height: 0.8rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  border: 1px solid var(--px-alert-label-border-color,transparent);
  background-color: var(--px-alert-label-background-color--healthy,green);
  color: var(--px-alert-label-text-color--healthy,white);
}

<div
  className="c0"
  type="success"
>
  <span
    className="label__text"
  >
    success
  </span>
</div>
`;

exports[`AlertLabel should render type = unknown 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  padding: 5px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.8rem;
  line-height: 0.8rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  border: 1px solid var(--px-alert-label-border-color,transparent);
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
}

<div
  className="c0"
  type="unknown"
>
  <span
    className="label__text"
  >
    unknown
  </span>
</div>
`;

exports[`AlertLabel should render type = warning 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  padding: 5px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.8rem;
  line-height: 0.8rem;
  background-color: var(--px-alert-label-background-color--unknown,gray);
  color: var(--px-alert-label-text-color--unknown,white);
  border: 1px solid var(--px-alert-label-border-color,transparent);
  background-color: var(--px-alert-label-background-color--warning,orange);
  color: var(--px-alert-label-text-color--warning,white);
}

<div
  className="c0"
  type="warning"
>
  <span
    className="label__text"
  >
    warning
  </span>
</div>
`;
